@@ -12,8 +12,6 @@
 
 package org.crmf.secreqimport.manager.gasf;
 
-import org.apache.camel.Produce;
-import org.apache.camel.ProducerTemplate;
 import org.crmf.model.audit.ISOControls;
 import org.crmf.model.requirement.SecurityRequirement;
 import org.crmf.model.utility.audit.ISOControlsSerializerDeserializer;
@@ -21,32 +19,31 @@ import org.crmf.model.utility.secrequirement.SecurityRequirementSerializerDeseri
 import org.crmf.persistency.mapper.secrequirement.SecRequirementServiceInterface;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.core.io.ClassPathResource;
+import org.springframework.stereotype.Service;
 
-import java.io.File;
-import java.nio.file.Files;
+import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.List;
 
-public class GASFInput implements GASFInputInterface {
+@Service
+public class GASFInput {
 
+  @Autowired
   private SecRequirementServiceInterface secrequirementService;
-  private SecurityRequirementSerializerDeserializer converter = new SecurityRequirementSerializerDeserializer();
 
-  @Produce(uri = "direct:getRequirement")
-  private ProducerTemplate template;
-
-  private static final String filename = ".//gasfSafeguard.csv";
+  private static final String filename = "gasfSafeguard.csv";
   private static final Logger LOG = LoggerFactory.getLogger(GASFInput.class.getName());
 
   //This method imports the full list of GASF requirements
   //After the import of GASF requirements, it saves them in the persistency and then it imports the relationships between GASF and MEHARI safeguards
-  @Override
-  public void importGASFRequirementsFull() {
+  public void importGASFRequirementsFull(String gasfsecreq) {
 
     LOG.info("importGASFRequirementsFull gasfsecreq");
-    Object gasfsecreq = template.requestBody(null);
     if (gasfsecreq != null) {
-      ArrayList<SecurityRequirement> gasfRequirements = converter.getSRsFromGASFJSONString(gasfsecreq.toString());
+      SecurityRequirementSerializerDeserializer converter = new SecurityRequirementSerializerDeserializer();
+      ArrayList<SecurityRequirement> gasfRequirements = converter.getSRsFromGASFJSONString(gasfsecreq);
       if (gasfRequirements != null && !gasfRequirements.isEmpty()) {
         secrequirementService.deleteSecRequirement();
 
@@ -55,7 +52,7 @@ public class GASFInput implements GASFInputInterface {
             secrequirementService.insertSecurityRequirement(securityRequirement);
         }
 
-        for (SecurityRequirement securityRequirement : gasfRequirements) {
+       for (SecurityRequirement securityRequirement : gasfRequirements) {
           if (securityRequirement != null)
             secrequirementService.insertSecRequirementParent(securityRequirement);
         }
@@ -69,8 +66,8 @@ public class GASFInput implements GASFInputInterface {
   private void importGASFSafeguardRelationFromFile(String filename) {
 
     try {
-      File srSgRelFile = new File(filename);
-      byte[] srSgBytes = Files.readAllBytes(srSgRelFile.toPath());
+      InputStream resource = new ClassPathResource(filename).getInputStream();
+      byte[] srSgBytes = resource.readAllBytes();
       String srSgS = new String(srSgBytes, "UTF-8");
 
       LOG.info("loadGASFSafeguardRelationFromFile " + srSgS);
@@ -98,10 +95,10 @@ public class GASFInput implements GASFInputInterface {
   private ISOControls importISOFromFile() {
 
     try {
-      String isoControlsPath = ".//ISO27002.json";
+      String isoControlsPath = "ISO27002.json";
 
-      File famJson = new File(isoControlsPath);
-      byte[] bamJson = Files.readAllBytes(famJson.toPath());
+      InputStream resource = new ClassPathResource(isoControlsPath).getInputStream();
+      byte[] bamJson = resource.readAllBytes();
       String amJsonString = new String(bamJson, "UTF-8");
 
       ISOControlsSerializerDeserializer amSerDes = new ISOControlsSerializerDeserializer();
@@ -113,18 +110,7 @@ public class GASFInput implements GASFInputInterface {
     return null;
   }
 
-  @Override
   public void importCWE() {
     // TODO Auto-generated method stub
-
   }
-
-  public SecRequirementServiceInterface getSecrequirementService() {
-    return secrequirementService;
-  }
-
-  public void setSecrequirementService(SecRequirementServiceInterface secrequirementService) {
-    this.secrequirementService = secrequirementService;
-  }
-
 }
